fix(layout): adjust padding for layout class in globals.css for better spacing fix(cart): enhance CartItemSkeleton layout and improve accessibility with clearer structure fix(nav): add close button to MiniCartDrawer for improved user experience fix(product): streamline ProductGrid component structure for better readability fix(input): modify Input component height for consistent styling across devices fix(mobile-nav): add margin to ProductSearch in MobileNavBar for better alignment

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -183,8 +183,8 @@
   margin-left: auto;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 /* Mimic tailwind container class */
@@ -204,12 +204,15 @@
 @media (min-width: 1024px) {
   .layout {
     max-width: 1024px;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 }
 /*xl*/
 @media (min-width: 1280px) {
   .layout {
     max-width: 1280px;
+
   }
 }
 /*2xl*/
